--- a/skyfolk/templates/account/password_reset.html
+++ b/skyfolk/templates/account/password_reset.html
@@ -6,22 +6,37 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
-    <div class="wrapper">
-    <h3 class="lost-password-title">{% trans "Password Reset" %}</h3>
-    {% if user.is_authenticated %}
-    {% include "account/account/snippets/already_logged_in.html" %}
-    {% endif %}
+{% block base-title %}
+    <a class="left grey-text hide-on-med-and-down"><h5>{% trans "Password Reset" %}</h5></a>
+{% endblock %}
 
-    <p class="lost-password">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input class="btn blue lighten-2 right" type="submit" value="{% trans "Reset My Password" %}" />
-    </form>
-    <br><br>
-    <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-    <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='/accounts/password/contact/'" title="Necesito ayuda" alt="Necesito ayuda"/>
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+            <h3 class="lost-password-title">{% trans "Password Reset" %}</h3>
+            {% if user.is_authenticated %}
+            {% include "account/account/snippets/already_logged_in.html" %}
+            {% endif %}
+
+            <p class="lost-password">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col l6 offset-l3 s12">
+                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input class="btn blue lighten-2 right" type="submit" value="{% trans "Reset My Password" %}" />
+                </form>
+            </div>
+        </div>
+        <br><br>
+        <div class="divider"></div>
+        <div class="row">
+            <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+            <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='/accounts/password/contact/'" title="Necesito ayuda" alt="Necesito ayuda"/>
+        </div>
     </div>
 {% endblock %}
 
