--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -23,10 +23,10 @@ body {
 .ctrlHolder {
   padding: 10px; }
 
-.wrapper {
+.container {
   position: relative;
   margin-top: 10%; }
-  .wrapper .need-help {
+  .container .need-help {
     width: 120px;
     height: 120px;
     display: block;
@@ -39,7 +39,7 @@ body {
     padding: 5px;
     border: 3px solid transparent;
     cursor: pointer; }
-  .wrapper .need-help:hover {
+  .container .need-help:hover {
     border: 3px solid #64B5F6; }
 
 .display-info-reset-password {
@@ -54,30 +54,22 @@ body {
     font-size: 1.45em;
     display: inline-block; }
   .display-info-reset-password .logotipo_skyfolk {
-    position: relative;
-    float: left;
-    display: inline-block; }
-  .display-info-reset-password .logotipo_skyfolk h5 {
-    font-family: "Pacifico", cursive;
-    font-size: 1.45em;
-    display: inline-block;
-    margin-right: 20px;
-    margin-left: 7px;
-    margin-top: 4px;
+    position: fixed;
+    font-family: "Pacifico", cursive !important;
+    margin: auto;
+    left: 50%;
     cursor: pointer;
-    color: #555; }
-  .display-info-reset-password .logotipo_skyfolk i {
-    color: #0096d7;
-    text-shadow: 1px 1px 1px #ccc; }
+    color: #555 !important;
+    font-size: 1.7em;
+    letter-spacing: 0.2p; }
+    .display-info-reset-password .logotipo_skyfolk > span {
+      color: #1e88e5;
+      text-shadow: 1px 1px 1px #ccc; }
 
 .menu {
-  position: relative;
-  width: 400px;
   text-align: center;
   height: auto;
   margin-top: 60px;
-  margin-right: auto;
-  margin-left: auto;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   background-color: #fff; }
 
@@ -109,78 +101,8 @@ p {
 form {
   position: relative;
   display: block;
-  width: 40%;
   height: auto;
   margin: auto; }
-
-.email_list {
-  background-color: #eee;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
-  .email_list label {
-    color: #616161;
-    display: inline-block;
-    font-size: 1.1em; }
-  .email_list button {
-    background-color: #64B5F6 !important;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    left: 10%;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    z-index: 1;
-    text-decoration: none;
-    color: #FFF;
-    text-align: center;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 2px;
-    height: 36px;
-    line-height: 36px;
-    outline: 0;
-    padding: 0 2rem;
-    text-transform: uppercase; }
-  .email_list input[type="submit"] {
-    background-color: #64B5F6 !important;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    z-index: 1;
-    text-decoration: none;
-    color: #FFF;
-    text-align: center;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 2px;
-    height: 36px;
-    line-height: 36px;
-    outline: 0;
-    padding: 0 2rem;
-    text-transform: uppercase; }
-
-.verified {
-  color: #8bc34a; }
-
-.unverified {
-  color: tomato; }
-
-.primary {
-  color: #1e88e5; }
-
-button[name="action_add"] {
-  float: right !important;
-  left: 0; }
 
 input[type="email"]:focus, button {
   border-bottom: 1px solid #64B5F6 !important;
