--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -86,8 +86,8 @@ window.moveTo(0,0);
             <!-- Atajos del usuario -->
             <div id="atajos-keyboard-profile">
                 <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
-                    <caption class="atajos-title">
-                        Atajos de teclado
+                    <caption class="hide-on-med-and-down atajos-title">
+                        <p>Atajos de teclado</p>
                         <i class="fa fa-close"></i>
                     </caption>
                     <thead>
@@ -158,7 +158,7 @@ window.moveTo(0,0);
                         </tr>
                         <tr>
                             <td class="shortcut">
-                                <b class="sc-key">Shift</b>
+                                <b class="sc-key">Ctrl</b>
                                 +
                                 <b class="sc-key">Enter</b>
                             </td>
