--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -165,7 +165,8 @@ body > .container {
   .nav-vertical-and-chat .nav-vertical-controls .controls-notifications {
     position: relative;
     list-style-type: none;
-    text-align: center; }
+    text-align: center;
+    margin-top: 5%; }
     .nav-vertical-and-chat .nav-vertical-controls .controls-notifications .nav-button-notifications, .nav-vertical-and-chat .nav-vertical-controls .controls-notifications .nav-button-notifications:visited {
       display: inline-block;
       height: 36px;
@@ -246,7 +247,7 @@ body > .container {
   margin-right: auto;
   left: 0;
   right: 0;
-  width: 500px;
+  max-width: 500px;
   height: auto;
   z-index: 9999;
   display: none;
@@ -255,10 +256,6 @@ body > .container {
 
 #atajos-keyboard-profile .atajos-title {
   position: relative;
-  width: 100%;
-  height: 25px;
-  margin-right: auto;
-  margin-left: auto;
   text-align: center;
   border-bottom: 2px solid #e0e0e0;
   font-size: 16px;
