--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -183,6 +183,7 @@ body > .container
       position: relative
       list-style-type: none
       text-align: center
+      margin-top: 5%
       & .nav-button-notifications, .nav-button-notifications:visited
         display: inline-block
         height: 36px
@@ -264,7 +265,7 @@ body > .container
   margin-right: auto
   left: 0
   right: 0
-  width: 500px
+  max-width: 500px
   height: auto
   z-index: 9999
   display: none
@@ -273,10 +274,6 @@ body > .container
 
 #atajos-keyboard-profile .atajos-title
   position: relative
-  width: 100%
-  height: 25px
-  margin-right: auto
-  margin-left: auto
   text-align: center
   border-bottom: 2px solid #e0e0e0
   font-size: 16px
