+ V4 + Mensajes en perfil propio o ajeno

--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -32,6 +32,10 @@ html, body
     & .contenido
       padding-left: 10px
       display: block
+      > p
+        > img
+          width: 20px
+          height: 20px
     & .author
       display: block
       padding-left: 10px
