--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -299,7 +299,13 @@ body > .container {
   border-radius: 1.5px;
   -webkit-box-shadow: 0 0 5px 0 rgba(50, 50, 50, 0.75);
   -moz-box-shadow: 0 0 5px 0 rgba(50, 50, 50, 0.75);
-  box-shadow: 0 0 5px 0 rgba(50, 50, 50, 0.75);
+  box-shadow: 0 0 5px 0 rgba(50, 50, 50, 0.75); }
+
+/* REGLAS PARA DIV ESTANDAR */
+.default-div {
+  background-color: #fff;
+  border-radius: 7px !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8) !important;
   /** Mensaje flotante */ }
 
 *, *:before, *:after {
@@ -311,9 +317,6 @@ body > .container {
   -moz-osx-font-smoothing: grayscale; }
 
 #page-wrapper {
-  background: #fff;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
-  border-radius: 7px;
   cursor: default;
   font-family: "Open Sans", sans-serif;
   overflow: hidden;
