--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -63,7 +63,7 @@
           <!-- INFORMACION ADICIONAL DEL USUARIO -->
         <div class="col s12"></div> <!-- separate div -->
                   <div class="col s10 m10 l3 info-paw" id="personal-card-info">
-                    <div class="info-nav">
+                    <div class="info-nav default-div">
                       <div class="info-wrapper-pic">
                           <div class="info-user-pic">{% avatar user_profile 90 %}</div>
                       </div>
