--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -43,139 +43,104 @@ Base para la interfaz en comun de todos los usuarios.
     <!-- Contenido de cada pagina por separado -->
 {% endblock %}
 {% if user.is_authenticated %}
-    <!-- Form para nuevo mensaje (perfil ajeno)-->
-    <div class="row">
-        <div id="page-wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
+    {% block compose-div-message %}
+        {% comment "Componer mensaje" %}
+            Componer mensaje para perfil ajeno
+        {% endcomment %}
+        {% if publicationForm %}
             <div class="row">
-                <div id="status" class="col s12 title-page-wrapper">
-                    {% if user == user_profile %}
+                <div id="page-wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
+                    <div class="row">
+                        <div id="status" class="col s12 title-page-wrapper">
+                            {% if user == user_profile %}
+                                <h4><i class="material-icons left">send</i>Publicar comentario</h4>
+                                <h6>Publica un comentario para que el mundo lo vea.</h6>
+                            {% else %}
+                                <h4><i class="material-icons left">send</i> Escribe algo a: {{ user_profile.username }}
+                                </h4>
+                                <h6>Escribe un mensaje en el tablón de {{ user_profile.username }}.</h6>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <form id="message-form2" action="" method="post">{% csrf_token %}
+                        {{ publicationForm.csrftoken }}
+                        <div class="row">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ publicationForm.content }}
+                                    <label for="message2">Escribe tu mensaje</label>
+                                </div>
+                            </div>
+                        </div>
+                        {{ publicationForm.author }}
+                        {{ publicationForm.board_owner }}
+                        {{ publicationForm.parent }}
+                        <div class="row">
+                            <div class="col s12">
+                                <button type="submit" id="sendformpubli"
+                                        class="waves-effect waves-light btn right blue">
+                                    Enviar<i class="material-icons right">send</i></button>
+                                <button type="button" id="close"
+                                        class="waves-effect waves-light btn right transparent black-text">Cerrar<i
+                                        class="material-icons right">close</i></button>
+                                <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
+                                <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i
+                                        class="material-icons">import_contacts</i></button>
+                                <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i
+                                        class="material-icons">attach_file</i></button>
+                                <button title="Localización" class="waves-effect waves-light btn left blue"><i
+                                        class="material-icons">location_on</i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        {% endif %}
+        {% comment "Componer mensaje" %}
+            Componer mensaje para mi propio perfil.
+        {% endcomment %}
+        <div class="row">
+            <div id="self-page-wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
+                <div class="row">
+                    <div id="status" class="col s12 title-page-wrapper">
                         <h4><i class="material-icons left">send</i>Publicar comentario</h4>
                         <h6>Publica un comentario para que el mundo lo vea.</h6>
-                    {% else %}
-                        <h4><i class="material-icons left">send</i> Escribe algo a: {{ user_profile.username }}</h4>
-                        <h6>Escribe un mensaje en el tablón de {{ user_profile.username }}.</h6>
-                    {% endif %}
+                    </div>
                 </div>
-            </div>
-            <form id="message-form2" action="" method="post">{% csrf_token %}
-                {{ publicationForm.csrftoken }}
-                <div class="row">
+                <form id="message-form2" action="" method="post">{% csrf_token %}
+                    {{ publicationSelfForm.csrftoken }}
                     <div class="row">
-                        <div class="input-field col s12">
-                            {{ publicationForm.content }}
-                            <label for="message2">Escribe tu mensaje</label>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                {{ publicationSelfForm.content }}
+                                <label for="message2">Escribe tu mensaje</label>
+                            </div>
                         </div>
                     </div>
-                </div>
-                {{ publicationForm.author }}
-                {{ publicationForm.board_owner }}
-                {{ publicationForm.parent }}
-                <div class="row">
-                    <div class="col s12">
-                        <button type="submit" id="sendformpubli" class="waves-effect waves-light btn right blue">
-                            Enviar<i class="material-icons right">send</i></button>
-                        <button type="button" id="close"
-                                class="waves-effect waves-light btn right transparent black-text">Cerrar<i
-                                class="material-icons right">close</i></button>
-                        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-                        <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">import_contacts</i></button>
-                        <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">attach_file</i></button>
-                        <button title="Localización" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">location_on</i></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!-- Form para nuevo mensaje (perfil propio)-->
-    <div class="row">
-        <div id="self-page-wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
-            <div class="row">
-                <div id="status" class="col s12 title-page-wrapper">
-                    <h4><i class="material-icons left">send</i>Publicar comentario</h4>
-                    <h6>Publica un comentario para que el mundo lo vea.</h6>
-                </div>
-            </div>
-            <form id="message-form2" action="" method="post">{% csrf_token %}
-                {{ publicationSelfForm.csrftoken }}
-                <div class="row">
+                    {{ publicationSelfForm.author }}
+                    {{ publicationSelfForm.board_owner }}
+                    {{ publicationSelfForm.parent }}
                     <div class="row">
-                        <div class="input-field col s12">
-                            {{ publicationSelfForm.content }}
-                            <label for="message2">Escribe tu mensaje</label>
+                        <div class="col s12">
+                            <button type="submit" id="sendselfformpubli"
+                                    class="waves-effect waves-light btn right blue">
+                                Enviar<i class="material-icons right">send</i></button>
+                            <button type="button" id="close"
+                                    class="waves-effect waves-light btn right transparent black-text">Cerrar<i
+                                    class="material-icons right">close</i></button>
+                            <!--  <input type="submit" id="sendselfformpubli" value="Submit Feedback" /> -->
+                            <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i
+                                    class="material-icons">import_contacts</i></button>
+                            <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i
+                                    class="material-icons">attach_file</i></button>
+                            <button title="Localización" class="waves-effect waves-light btn left blue"><i
+                                    class="material-icons">location_on</i></button>
                         </div>
                     </div>
-                </div>
-                {{ publicationSelfForm.author }}
-                {{ publicationSelfForm.board_owner }}
-                {{ publicationSelfForm.parent }}
-                <div class="row">
-                    <div class="col s12">
-                        <button type="submit" id="sendformpubli" class="waves-effect waves-light btn right blue">
-                            Enviar<i class="material-icons right">send</i></button>
-                        <button type="button" id="close"
-                                class="waves-effect waves-light btn right transparent black-text">Cerrar<i
-                                class="material-icons right">close</i></button>
-                        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-                        <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">import_contacts</i></button>
-                        <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">attach_file</i></button>
-                        <button title="Localización" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">location_on</i></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!-- Form para nuevo mensaje (perfil ajeno)-->
-    <div class="row">
-        <div id="page-wrapper" class="col l5 m12 s12 default-div" style="display:none;">
-            <div class="row">
-                <div id="status" class="col s12 title-page-wrapper">
-                    {% if user == user_profile %}
-                        <h4><i class="material-icons left">send</i>Publicar comentario</h4>
-                        <h6>Publica un comentario para que el mundo lo vea.</h6>
-                    {% else %}
-                        <h4><i class="material-icons left">send</i> Escribe algo a: {{ user_profile.username }}</h4>
-                        <h6>Escribe un mensaje en el tablón de {{ user_profile.username }}.</h6>
-                    {% endif %}
-                </div>
+                </form>
             </div>
-            <form id="message-form2" action="" method="post">{% csrf_token %}
-                {{ publicationForm.csrftoken }}
-                <div class="row">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            {{ publicationForm.content }}
-                            <label for="message2">Escribe tu mensaje</label>
-                        </div>
-                    </div>
-                </div>
-                {{ publicationForm.author }}
-                {{ publicationForm.board_owner }}
-                {{ publicationForm.parent }}
-                <div class="row">
-                    <div class="col s12">
-                        <button type="submit" id="sendformpubli" class="waves-effect waves-light btn right blue">
-                            Enviar<i class="material-icons right">send</i></button>
-                        <button type="button" id="close"
-                                class="waves-effect waves-light btn right transparent black-text">Cerrar<i
-                                class="material-icons right">close</i></button>
-                        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-                        <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">import_contacts</i></button>
-                        <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">attach_file</i></button>
-                        <button title="Localización" class="waves-effect waves-light btn left blue"><i
-                                class="material-icons">location_on</i></button>
-                    </div>
-                </div>
-            </form>
         </div>
-    </div>
+    {% endblock %}
     <!-- Atajos del usuario -->
     <div class="default-div" id="atajos-keyboard-profile">
         <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
@@ -261,21 +226,10 @@ Base para la interfaz en comun de todos los usuarios.
         </table>
     </div>
 {% endif %}
-<div class="hide-on-large-only fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large blue darken-1  ">
-        <i class="large material-icons">menu</i>
-    </a>
-    <ul>
-        <li><a href="{% url 'user_profile:profile' request.user %}" class="btn-floating red"><i class="material-icons">home</i></a>
-        </li>
-        <li><a id="publish3" class="btn-floating yellow darken-1"><i class="material-icons">create</i></a></li>
-        <li><a href="/following/{{ request.user.username }}" class="btn-floating green"><i
-                class="material-icons">people</i></a></li>
-        <li><a id="agregar-amigo2" class="btn-floating blue"><i class="material-icons">add</i></a></li>
-        <li><a href="{% url 'account_logout' %}" class="btn-floating grey darken-3"><i class="material-icons">exit_to_app</i></a>
-        </li>
-    </ul>
-</div>
+{% comment "menu movil" %}
+    Menu para versiones tablet/movil
+{% endcomment %}
+{% include "account/mobile-menu.html" %}
 <script src="{{ STATIC_URL }}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
 </body>
 </html>
