--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -3,49 +3,64 @@
 {% block title %} <title>Skyfolk</title> {% endblock %}
 
 {% block extra-css %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/news.css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/news.css"/>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col s12 wrapper-news">
-            {% comment "Usuarios con mayor afinidad" %}
-            Lista de los 6 usuarios con mayor afinidad.
-            {% endcomment %} 
-            <div class="row">
-            {% for fav in fav_users %}
-                <div class="col l2 m12 s12">
-                    <div class="notice-item">
-                        <div class="col l3 m2 s3 img">
-                            {% avatar fav.receiver.user %}
+    <div class="container">
+        <div class="row">
+            <div class="col s12 wrapper-news">
+                {% comment "Usuarios con mayor afinidad" %}
+                    Lista de los 6 usuarios con mayor afinidad.
+                {% endcomment %}
+                <div class="row">
+                    {% for fav in fav_users %}
+                        <div class="col l2 m12 s12">
+                            <div class="notice-item">
+                                <div class="col l3 m2 s3 img">
+                                    {% avatar fav.to_like.user %}
+                                </div>
+                                <div class="col l8 m9 s8 author">
+                                    <a href="/profile/{{ fav.to_like.user }}">@{{ fav.to_like.user.username }}</a><i>{{ fav.to_like.user.first_name }} {{ fav.to_like.last_name }}</i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col l8 m9 s8 author">
-                            <a href="/profile/{{fav.receiver.user}}">@{{ fav.receiver.user.username }}</a><i>{{ fav.receiver.user.first_name }} {{ fav.receiver.last_name }}</i>
+                    {% endfor %}
+                </div>
+                <div class="row">
+                    {% for affinity in affinity_users %}
+                        <div class="col l2 m12 s12">
+                            <div class="notice-item">
+                                <div class="col l3 m2 s3 img">
+                                    {% avatar affinity.receiver.user %}
+                                </div>
+                                <div class="col l8 m9 s8 author">
+                                    <a href="/profile/{{ affinity.receiver.user }}">@{{ affinity.receiver.user.username }}</a><i>{{ affinity.receiver.user.first_name }} {{ affinity.receiver.last_name }}</i>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="divider"></div>
+                <br>
+                <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/news.css"/>
+                {% for pub in publications %}
+                    <div class="col l3 m12 s12">
+                        <div class="notice-item">
+                            <div class="col l3 m2 s3 img">
+                                {% avatar pub.author.username %}
+                            </div>
+                            <div class="col l8 m9 s8 author">
+                                <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
+                                <i class="pub-date">{{ pub.created }}</i>
+                            </div>
+                            <div class="col l9 m10 s9 contenido">
+                                <p>{{ pub.content|safe }}</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
             </div>
-            <div class="divider"></div><br>
-            <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/news.css" />
-            {% for pub in publications %}
-            <div class="col l3 m12 s12">
-                <div class="notice-item">
-                <div class="col l3 m2 s3 img">
-                    {% avatar pub.author.username %}
-                </div>
-                <div class="col l8 m9 s8 author">
-                    <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
-                    <i class="pub-date">{{ pub.created }}</i>
-                </div>
-                <div class="col l9 m10 s9 contenido">
-                    <p>{{ pub.content|safe }}</p>
-                </div>
-            </div>
-        </div>
-            {% endfor %}
         </div>
     </div>
-</div>
 {% endblock %}
