--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -1,45 +1,47 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
 	{% block title %}
-    <title>¡Bienvenido a Skyfolk, {{ newUser }}!</title>
-    {% endblock %}
+	<title>¡Bienvenido a Skyfolk, {{ user_profile }}!</title>
+	{% endblock %}
 	<meta charset="utf-8" />
-    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.css"  media="screen,projection"/>
-    <script async type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
-    <script async src="{{STATIC_URL}}js/welcome.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.css" media="screen,projection" />
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+	<script src="{{STATIC_URL}}js/materialize.js" type="text/javascript"></script>
+	<script src="{{STATIC_URL}}js/welcome.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 
 <body class="teal lighten-5" onload="loadImage()" style="background-image: url({{STATIC_URL}}img/backgrounds/5.jpg);">
-    <div class="container">
-    	{% block content %}
-        <div class="row">
-            <div class="card-info">
-            <div class="col s12 m12 l12">
-                <div class="card blue-grey lighten-5">
-                    <div class="card-content blue-text">
-                        <h3> Bienvenido a Skyfolk.</h3>
-                        <h5>Vamos a preparar tu cuenta.</h5>
-                    </div>
-                    <div class="progress">
-                        <div class="indeterminate"> </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-						<form onsubmit="return false;">
-							{% csrf_token %}
-							<button id="omitir-{{newUser}}" class="updatebutton" onclick="setfirstLogin(this);">Submit</button>
-						</form>
-        		<a onclick="location.href='/step1/{{request.user}}'" class="waves-effect waves-light btn right" onload="loadButtons()">Configurar cuenta</a>
-            <ahref="/profile/{{newUser}}" id="omitir-{{newUser}}" class="waves-effect waves-light btn" onload="loadButtons()">Omitir</a>
-					 {% endblock %}
-    </div>
+	<div class="container">
+		{% block content %}
+		<div class="row">
+			<div class="card-info">
+				<div class="col s12 m12 l12">
+					<div class="card blue-grey lighten-5">
+						<div class="card-content blue-text">
+							<h3> Bienvenido a Skyfolk.</h3>
+							<h5>Vamos a preparar tu cuenta.</h5>
+						</div>
+						<div class="progress">
+							<div class="indeterminate"> </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<a onclick="location.href='/step1/'" class="waves-effect waves-light btn right">Configurar cuenta</a>
+			<a href="/setfirstLogin/" class="waves-effect waves-light btn">Omitir</a>
+		</div>
+		{% endblock %}
+	</div>
 
 </body>
+
 </html>
