+ V4 + Afinidad con los usuarios

--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -18,10 +18,10 @@
                         <div class="col l2 m12 s12">
                             <div class="notice-item">
                                 <div class="col l3 m2 s3 img">
-                                    {% avatar fav.user %}
+                                    {% avatar fav.0 %}
                                 </div>
                                 <div class="col l8 m9 s8 author">
-                                    <a href="/profile/{{ fav.user }}">@{{ fav.user.username }}</a><i>{{ fav.user.first_name }} {{ fav.last_name }}</i>
+                                    <a href="/profile/{{ fav.1 }}">@{{ fav.1 }}</a><i>{{ fav.2 }} {{ fav.3 }}</i>
                                 </div>
                             </div>
                         </div>
