--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -16,7 +16,7 @@
 </head>
 
 
-<body class="teal lighten-5" onload="loadImage()" style="background-image: url({{STATIC_URL}}img/backgrounds/5.jpg);">
+<body class="teal lighten-5" style="background-image: url({{STATIC_URL}}img/backgrounds/alternative_back.jpeg); background-size: 100%">
 	<div class="container">
 		{% block content %}
 		<div class="row">
