--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -19,11 +19,16 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col s12">
+                        <p class="flow-text">Temas de interes comunes: {% for theme in top_tags %}<i> {{ theme.name }}</i>{% endfor %}</p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col s12 m5 l4">
-                        <div class="card white">
+                        <div onclick="show_data()" class="card white">
                             <div class="card-content">
-                                <span class="card-title grey-text darken-1"><i
-                                        class="fa fa-futbol-o"> </i> Deportes</span>
+                                <span class="card-title grey-text darken-1">
+                                    <i class="fa fa-futbol-o"> </i> Deportes</span>
                                 <p class="blue-text darken-1">I am a very simple card. I am good at containing small
                                     bits of information. I am convenient because I require little
                                     markup to use effectively.</p>
@@ -322,11 +327,6 @@
                 {% comment %}
                 Pruebas
                 {% endcomment %}
-                <div class="row">
-                    {{ form.tags.errors }}
-                    {{ form.tags }}
-                </div>
-
                 <div class="row">
                     <div class="col s12">
                         <button type="submit" class="waves-effect waves-light btn right blue">He acabado.</button>
