--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 m5 l4">
-                        <div onclick="show_data()" class="card white">
+                        <div class="card white">
                             <div class="card-content">
                                 <span class="card-title grey-text darken-1">
                                     <i class="fa fa-futbol-o"> </i> Deportes</span>
