--- a/skyfolk/static/css/welcome.css
+++ b/skyfolk/static/css/welcome.css
@@ -1,30 +1,21 @@
-body {
-  padding: 0;
-  margin: auto;
-  max-width: 80%;
-  height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background: center fixed; }
+html, body {
+  height: 100%; }
 
 .card-info {
-  margin-top: 30%;
+  margin-top: 20%;
   text-align: center; }
 
-.container .configuration {
-  width: 100%;
-  height: auto;
-  background-color: rgba(250, 250, 250, 0.8);
-  position: relative;
-  display: block; }
-
-.container .configuration .title {
-  background-color: #fff;
-  height: 30%;
-  color: #1e88e5;
-  border-bottom: 2px solid #1e88e5; }
-
-.container .configuration .title h3 {
-  padding: 15px; }
+.container {
+  padding: 10px;
+  margin-top: 1.3em; }
+  .container > .wrapper {
+    padding: 10px; }
+  .container > .title {
+    background-color: #fff;
+    height: 30%;
+    color: #1e88e5;
+    border-bottom: 2px solid #1e88e5; }
+    .container > .title > h3 {
+      padding: 15px; }
 
 /*# sourceMappingURL=welcome.css.map */
