--- a/skyfolk/static/sass/welcome.sass
+++ b/skyfolk/static/sass/welcome.sass
@@ -1,32 +1,20 @@
-﻿body
-  padding: 0
-  margin: auto
-  max-width: 80%
+﻿html, body
   height: 100%
-  background-size: cover
-  background-repeat: no-repeat
-  background: center fixed
-
+  
 
 .card-info
-  margin-top: 30%
+  margin-top: 20%
   text-align: center
 
-
-.container .configuration
-  width: 100%
-  height: auto
-  background-color: rgba(250, 250, 250, 0.8)
-  position: relative
-  display: block
-
-
-.container .configuration .title
-  background-color: #fff
-  height: 30%
-  color: #1e88e5
-  border-bottom: 2px solid #1e88e5
-
-
-.container .configuration .title h3
-  padding: 15px
+.container 
+  padding: 10px
+  margin-top: 1.3em
+  > .wrapper
+    padding: 10px
+  > .title
+    background-color: #fff
+    height: 30%
+    color: #1e88e5
+    border-bottom: 2px solid #1e88e5
+    > h3
+      padding: 15px
