--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-	<img class="active-img" src="{{STATIC_URL}}img/backgrounds/alternative_back.jpeg" alt="background">
+	<img class="active-img" src="{{STATIC_URL}}img/backgrounds/back.jpg" alt="background">
 	<header>
 	</header>
 	<nav class="hide-on-large-only">
