--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -16,7 +16,7 @@
 </head>
 
 
-<body style="background-image: url({{STATIC_URL}}img/backgrounds/alternative_back.jpeg); background-repeat: no-repeat; background-position: center; background-size: cover; background-attachment: fixed;">
+<body style="background-image: url({{STATIC_URL}}img/backgrounds/back.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; background-attachment: fixed;">
 	<div class="container">
 		{% block content %}
 		<div class="row">
