--- a/skyfolk/static/sass/welcome.sass
+++ b/skyfolk/static/sass/welcome.sass
@@ -11,6 +11,14 @@
   margin-top: 1.3em
   > .wrapper
     padding: 10px
+    border-radius: 7px
+    .card-content
+      img
+        width: 72px
+        height: 100%
+        border-right: 2px solid #1e88e5
+        cursor: pointer
+        box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2)
   > .title
     background-color: #fff
     height: 30%
