--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -24,7 +24,7 @@
 				<div class="col s12 m12 l12">
 					<div class="card blue-grey lighten-5">
 						<div class="card-content blue-text">
-							<h3> Bienvenido a Skyfolk.</h3>
+							<h3> Bienvenido a Skyfolk, {{ user_profile }}.</h3>
 							<h5>Vamos a preparar tu cuenta.</h5>
 						</div>
 						<div class="progress">
@@ -37,10 +37,10 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col l6 m5 s12 right">
-					<a onclick="location.href='/step1/'" class="waves-effect waves-light btn right blue darken-1">Configurar cuenta</a>
+					<a onclick="location.href='{% url 'user_profile:welcome_step_1' %}'" class="waves-effect waves-light btn right blue darken-1">Configurar cuenta</a>
 				</div>
 				<div class="col l6 m5 s12 left">
-					<a href="/profile/{{user_profile}}/" class="waves-effect waves-light btn left blue darken-1">Omitir</a>
+					<a href="{% url 'user_profile:profile' username=user_profile %}" class="waves-effect waves-light btn left blue darken-1">Omitir</a>
 				</div>
 			</div>
 		</div>
