+ V4 + Lista de usuarios que han dado me gusta a un perfil

--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -172,7 +172,7 @@
                             id="followers-stats">{{ followers }}</strong><span>Seguidores</span></a>
                 </li>
                 <li>
-                    <a id="likes"><strong>{{ n_likes }}</strong><span title="me gusta"
+                    <a id="likes" href="{% url "user_profile:like_list" username=user_profile.username %}"><strong>{{ n_likes }}</strong><span title="me gusta"
                                                                       onclick="contador()">Me gusta</span></a>
                 </li>
                 <li>
