--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -37,13 +37,11 @@
 			<a href="/" class="brand-logo center skyfolk-logo"><span>S</span>kyfolk</a>
 		</div>
 	</nav>
-    {% comment "loader" %}
-        Desaparece cuando la pagina este lista...
-    {% endcomment %}
+	{% comment "loader" %} Desaparece cuando la pagina este lista... {% endcomment %}
 	<div class="progress">
 		<div class="indeterminate"></div>
 	</div>
-    
+
 	<div class="row">
 		<div class="hide-on-med-and-down namesn">
 			<div onclick="javascript:location.href='/'" class="logo">
