--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login-signup.css" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css" onload="if(media!='all')media='all'">
 	<link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css" media="screen,projection" onload="if(media!='all')media='all'">
-	<script src="{{STATIC_URL}}js/jquery.min.js"></script>
+    <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
 	<script>
         $(window).load(function(){
             $('.progress').fadeOut();
