--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -1,5 +1,6 @@
 $blueskyfolk: #1e88e5
 $followcolor: #64b5f6
+$greycolor: #555
 
 @font-face
   font-family: 'Open Sans'
@@ -15,17 +16,25 @@ $followcolor: #64b5f6
   box-sizing: border-box
 
 
+html
+  color: $greycolor !important
+  font-family: 'Open Sans', sans-serif !important
+  font-size: 11.5px !important
+  font-style: normal !important
+  font-weight: 300 !important
+  -webkit-font-smoothing: antialiased !important
+
 button::-moz-focus-inner
   border: 0
 
 /* IMPORTANTE PARA CONSERVAR LOS BORDES DE LA INTERFAZ */
-
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,menu,nav,output,ruby,section,summary,time,mark,audio,video
   margin: 0
   padding: 0
   border: 0
   font: inherit
   vertical-align: baseline
+
 article,aside,details,figcaption,figure,footer,header,menu,nav,section
   display: block
 body
