--- a/skyfolk/static/sass/gallery.css
+++ b/skyfolk/static/sass/gallery.css
@@ -1,29 +1,40 @@
-html, body {
-  color: #555 !important;
-  font-family: "Open Sans", sans-serif !important;
-  font-size: 11.5px !important; }
+.container .upload_form {
+  width: 55%;
+  background: #fff;
+  padding: 1em;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  position: fixed;
+  margin: -100px auto 0 auto;
+  top: 20%;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: none; }
+.container .endless_more, .container .endless_loading {
+  clear: both;
+  text-align: center; }
+.container .endless_more {
+  display: block; }
 
-@media only screen and (min-width: 1220px) {
-  .container-gallery > .container-image {
-    margin-left: 2.81%; } }
-.wrapper {
-  padding: 10px;
-  margin-top: 1.3%; }
+.container-gallery .btn-floating {
+  display: block;
+  margin: 0 auto 1% auto; }
 
-.container-gallery {
-  margin-top: 2.7%; }
+.image-div {
+  margin-bottom: 2.5%; }
 
 .container-image {
   background-color: #ffffff;
   height: 400px;
-  padding: 10px;
   border-radius: 3px;
-  margin-bottom: 2.5%;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
   .container-image .principal-content {
     display: block;
     height: 85%;
-    width: 100%; }
+    width: 100%;
+    position: relative; }
     .container-image .principal-content img {
       width: 100%;
       height: 100%;
@@ -32,19 +43,22 @@ html, body {
     .container-image .principal-content .tags-content {
       position: absolute;
       padding: 10px;
-      height: 50px; }
+      height: 50px;
+      width: 100%;
+      text-align: center; }
       .container-image .principal-content .tags-content blockquote {
         display: inline-block;
         color: #1e88e5;
         border-radius: 3px;
         background-color: rgba(255, 255, 255, 0.15);
         transition: all 0.1s ease-in-out;
-        padding: 10px; }
+        padding: 10px;
+        margin-top: 2%; }
         .container-image .principal-content .tags-content blockquote:hover {
           background-color: white; }
   .container-image .legend-content {
     height: 15%;
-    padding: 10px; }
+    padding: 5px; }
     .container-image .legend-content .legend-user-image {
       width: 20%;
       height: 50px;
