--- a/skyfolk/static/sass/mensajes_privados.css
+++ b/skyfolk/static/sass/mensajes_privados.css
@@ -1,10 +1,3 @@
-html {
-  font-size: 11.5px !important;
-  font-style: normal;
-  font-weight: 300;
-  font-family: "Open Sans", sans-serif !important;
-  color: #555; }
-
 .wrapper {
   font-size: 1.1em;
   margin-top: 5%;
@@ -139,7 +132,8 @@ html {
   display: block;
   background-color: #fff;
   border-top: 1px solid #e1e8ed;
-  padding: 8px 12px; }
+  padding: 8px 12px;
+  cursor: pointer; }
 
 .menu-config li:hover {
   color: #1e88e5;
