+ V4 + Lista de usuarios que han dado like a un perfil

--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -78,7 +78,7 @@ $tomatocolor: #ff6347
   position: relative
   width: 60%
   height: auto
-  margin: 50px auto auto
+  margin: auto
   text-align: center
   border-radius: 7px
   padding: 10px
