--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -69,7 +69,7 @@
   position: relative;
   width: 60%;
   height: auto;
-  margin: 50px auto auto;
+  margin: auto;
   text-align: center;
   border-radius: 7px;
   padding: 10px;
