--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -45,14 +45,14 @@
                     {{ form.crop_from.errors }}
                     <div class="input-field col s12">
                         {{ form.crop_from }}
-                        <label>{% trans "crop from" %}</label>
+                        <label for="id_crop_from">{% trans "crop from" %}</label>
                     </div>
                 </div>
                 <div class="row">
                     {{ form.effect.errors }}
                     <div class="input-field col s12">
                         {{ form.effect }}
-                        <label>{% trans "photo effects" %}</label>
+                        <label for="id_effect">{% trans "photo effects" %}</label>
                     </div>
                 </div>
                 <div class="row">
