--- a/skyfolk/static/sass/setup.sass
+++ b/skyfolk/static/sass/setup.sass
@@ -5,8 +5,8 @@ body
   background-color: #fafafa
   padding: 0
   font-family: 'Open Sans', sans-serif
-
-.div-messages
+//
+  .div-messages
   background-color: #eee
   border-radius: 3px
   position: absolute
@@ -21,6 +21,7 @@ body
     list-style: none
     & li
       display: list-item
+
 .ctrlHolder
   padding: 10px
 
@@ -36,7 +37,7 @@ body
     margin: auto
     -webkit-transition: all .2s linear
     -moz-transition: all .2s linear
-    trasnsition: all .2s linear
+    transition: all .2s linear
     border-radius: 100%
     padding: 5px
     border: 3px solid transparent
@@ -51,7 +52,8 @@ body
   position: fixed
   top: 0
   background-color: #fff
-  padding: 0 12px
+  h5
+    margin-left: 2%
 
   & h6
     color: #bdbdbd
