--- a/skyfolk/templates/account/account/password_reset.html
+++ b/skyfolk/templates/account/account/password_reset.html
@@ -21,7 +21,7 @@
     </form>
     <br><br>
     <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-    <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='/accounts/password/contact/'" title="Necesito ayuda" alt="Necesito ayuda"/>
+    <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='{% url 'support:support-password' %}'" title="Necesito ayuda" alt="Necesito ayuda"/>
     </div>
 {% endblock %}
 
