--- a/skyfolk/templates/account/password_reset.html
+++ b/skyfolk/templates/account/password_reset.html
@@ -4,7 +4,7 @@
 {% load account %}
 {% load url from future %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_title %}Skyfolk - {% trans "Password Reset" %}{% endblock %}
 
 {% block base-title %}
     <a class="left grey-text hide-on-med-and-down"><h5>{% trans "Password Reset" %}</h5></a>
@@ -35,7 +35,7 @@
         <div class="divider"></div>
         <div class="row">
             <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-            <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='/accounts/password/contact/'" title="Necesito ayuda" alt="Necesito ayuda"/>
+            <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='{% url 'support:support-password' %}'" title="Necesito ayuda" alt="Necesito ayuda"/>
         </div>
     </div>
 {% endblock %}
