--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -5,21 +5,6 @@ body {
   padding: 0;
   font-family: "Open Sans", sans-serif; }
 
-.div-messages {
-  background-color: #eee;
-  border-radius: 3px;
-  position: absolute;
-  display: block;
-  margin-top: 0;
-  margin-left: 1.25%;
-  width: 300px;
-  padding: 10px;
-  height: auto; }
-  .div-messages ul {
-    list-style: none; }
-    .div-messages ul li {
-      display: list-item; }
-
 .ctrlHolder {
   padding: 10px; }
 
@@ -34,7 +19,7 @@ body {
     margin: auto;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
-    trasnsition: all 0.2s linear;
+    transition: all 0.2s linear;
     border-radius: 100%;
     padding: 5px;
     border: 3px solid transparent;
@@ -47,8 +32,9 @@ body {
   max-height: 40px;
   position: fixed;
   top: 0;
-  background-color: #fff;
-  padding: 0 12px; }
+  background-color: #fff; }
+  .display-info-reset-password h5 {
+    margin-left: 2%; }
   .display-info-reset-password h6 {
     color: #bdbdbd;
     font-size: 1.45em;
