--- a/skyfolk/templates/support/password-contact.html
+++ b/skyfolk/templates/support/password-contact.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
         <h3 class="lost-password-title">Soporte y ayuda</h3>
         <p>Si no ha podido resolver su problema de ninguna otra forma, por favor, contacta con nosotros.</p>
+        <p>Nos pondremos en contacto contigo mediante tu correo personal asociado a tu perfil.</p>
         {% if user.is_authenticated %}
             {% include "account/account/snippets/already_logged_in.html" %}
         {% endif %}
