--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -48,7 +48,7 @@
                 {% if user.is_authenticated and user.username == user_profile.username %}
                     <!-- Si el usuario esta visitando su propio perfil -->
                     <span id="configurationOnProfile" class="fa fa-cog" title="Configuracion"></span>
-                    <span onclick="location.href='/friends/{{ user.username }}'" id="conf" class="fa fa-users"
+                    <span onclick="location.href='{% url "user_groups:list-group" %}'" id="conf" class="fa fa-users"
                           title="Grupos"></span>
                     <span id="publish3" class="fa fa-paper-plane" title="Escribir"></span>
                 {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
